# Play

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: Findavcodec.cmake  Findavformat.cmake  Findavutil.cmake  Findswresample.cmake  Findswscale.cmake
include/: common.hpp
include/vf/: config.hpp  format.hpp
include/vf/ext/: al.hpp  av.hpp
src/: main.cpp
