PROJECT(Play)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH}")

SET(VERSION_MAJOR 0)
SET(VERSION_MINOR 1)
SET(VERSION_PATCH 1)

SET(PROJECT_VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
ADD_DEFINITIONS(-DPROJECT_VERSION="${PROJECT_VERSION}")

SET(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++")

FIND_PACKAGE(avformat REQUIRED)
FIND_PACKAGE(avcodec REQUIRED)
FIND_PACKAGE(avutil REQUIRED)
FIND_PACKAGE(Boost COMPONENTS filesystem program_options system REQUIRED)
FIND_PACKAGE(OpenAL REQUIRED)
FIND_PACKAGE(swresample REQUIRED)
FIND_PACKAGE(swscale REQUIRED)

INCLUDE_DIRECTORIES(
	include
	${AVFORMAT_INCLUDE_DIR}
	${AVCODEC_INCLUDE_DIR}
	${AVUTIL_INCLUDE_DIR}
	${Boost_INCLUDE_DIR}
	${OPENAL_INCLUDE_DIR}
	${SWRESAMPLE_INCLUDE_DIR}
	${SWSCALE_INCLUDE_DIR}
)

SET(HEADER_FILES
	include/common.hpp
)

SET(HEADER_FILES_VF
	include/vf/config.hpp
	include/vf/format.hpp
)

SET(HEADER_FILES_VF_EXT
	include/vf/ext/al.hpp
	include/vf/ext/av.hpp
)

SET(SOURCE_FILES
	src/main.cpp
)

SET(ALL_HEADER_FILES
	${HEADER_FILES}
	${HEADER_FILES_VF}
	${HEADER_FILES_VF_EXT}
)

SET(ALL_SOURCE_FILES
	${SOURCE_FILES}
)

SOURCE_GROUP("Header Files" FILES ${HEADER_FILES})
SOURCE_GROUP("Header Files\\vf" FILES ${HEADER_FILES_VF})
SOURCE_GROUP("Header Files\\vf\\ext" FILES ${HEADER_FILES_VF_EXT})

ADD_EXECUTABLE(play ${ALL_HEADER_FILES} ${ALL_SOURCE_FILES})

TARGET_LINK_LIBRARIES(play
	${AVFORMAT_LIBRARY}
	${AVCODEC_LIBRARY}
	${AVUTIL_LIBRARY}
	${Boost_FILESYSTEM_LIBRARY}
	${Boost_PROGRAM_OPTIONS_LIBRARY}
	${Boost_SYSTEM_LIBRARY}
	${OPENAL_LIBRARY}
	${SWRESAMPLE_LIBRARY}
	${SWSCALE_LIBRARY}
)

INSTALL(TARGETS play
	ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
	LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
	RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
)